--- a/serenity-app/src/main/res/layout-large/include_loading_progress.xml
+++ b/serenity-app/src/main/res/layout-large/include_loading_progress.xml
@@ -4,8 +4,7 @@
   android:layout_height="150dp"
   android:layout_gravity="center"
   android:visibility="gone"
-  android:id="@+id/data_loading_container"
-  android:background="@color/card_background">
+  android:id="@+id/data_loading_container">
 
   <ProgressBar
     android:id="@+id/data_loading_progress"
