Add loading indicator for videos

--- a/serenity-app/src/main/res/layout-large/activity_exoplayer_video.xml
+++ b/serenity-app/src/main/res/layout-large/activity_exoplayer_video.xml
@@ -24,4 +24,9 @@
 
   </FrameLayout>
 
+  <include layout="@layout/include_loading_progress"
+      android:layout_width="150dp"
+      android:layout_height="150dp"
+      android:layout_gravity="center"/>
+
 </FrameLayout>
