Issue #403 Fix automatic pausing after buffering

--- a/serenity-app/src/main/res/layout-large/activity_exoplayer_video.xml
+++ b/serenity-app/src/main/res/layout-large/activity_exoplayer_video.xml
@@ -18,8 +18,9 @@
         android:id="@+id/player_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:rewind_increment="300000"
-        app:fastforward_increment="300000"
+        app:rewind_increment="10000"
+        app:fastforward_increment="30000"
+        app:show_buffering="true"
         />
 
   </FrameLayout>
@@ -27,6 +28,7 @@
   <include layout="@layout/include_loading_progress"
       android:layout_width="150dp"
       android:layout_height="150dp"
-      android:layout_gravity="center"/>
+      android:layout_gravity="center"
+      android:visibility="gone"/>
 
 </FrameLayout>
