--- a/serenity-app/src/main/res/layout-large/activity_exoplayer_video.xml
+++ b/serenity-app/src/main/res/layout-large/activity_exoplayer_video.xml
@@ -9,13 +9,14 @@
 
 
   <com.google.android.exoplayer2.ui.PlayerView
-      android:id="@+id/player_view"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
+        android:id="@+id/player_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
       app:rewind_increment="10000"
       app:fastforward_increment="30000"
       app:show_buffering="true"
-      />
+        app:show_buffering="true"
+        />
 
 
   <include layout="@layout/include_loading_progress"
