--- a/serenity-app/src/main/res/layout-large/activity_server_selection.xml
+++ b/serenity-app/src/main/res/layout-large/activity_server_selection.xml
@@ -22,17 +22,22 @@
     android:layout_height="150dp"
     android:layout_centerInParent="true"/>
 
-  <LinearLayout
-      android:orientation="vertical"
-      android:id="@+id/server_container"
+  <ScrollView
+      android:layout_below="@+id/server_selection_header_text"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:layout_below="@+id/server_selection_header_text"
       android:layout_marginStart="100dp"
       android:layout_marginEnd="100dp"
-      android:layout_marginBottom="45dp"
-      android:scrollbars="none"
-      android:visibility="gone"
-      />
+      android:layout_marginBottom="45dp">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/server_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="none"
+        android:visibility="gone"
+        />
+  </ScrollView>
 
 </RelativeLayout>
