--- a/serenity-app/src/main/res/values/dimens.xml
+++ b/serenity-app/src/main/res/values/dimens.xml
@@ -13,11 +13,22 @@
   <dimen name="overscan_bottom_padding">15dp</dimen>
 
   <!-- Video Meta Data Info Graphics -->
-  <dimen name="info_graphic_width">100dp</dimen>
-  <dimen name="info_graphic_height">58dp</dimen>
+  <dimen name="info_graphic_width">90dp</dimen>
+  <dimen name="info_graphic_height">48dp</dimen>
+
+  <dimen name="video_infogrpahic_height">30dp</dimen>
+  <dimen name="video_infographic_width">70dp</dimen>
+
+  <dimen name="audio_infographic_width">70dp</dimen>
+  <dimen name="audio_inographic_height">30dp</dimen>
+
+  <dimen name="tv_show_infographic_width">70dp</dimen>
+  <dimen name="tv_show_infographic_height">35dp</dimen>
 
   <dimen name="search_card_image_width">190dp</dimen>
   <dimen name="search_card_image_height">260dp</dimen>
 
+  <dimen name="tv_show_image_height">300dp</dimen>
+  <dimen name="tv_show_image_width">200dp</dimen>
 
 </resources>
