Simplify loading content ratings for tv shows

--- a/serenity-app/src/main/res/layout-large/include_tvshow_detail.xml
+++ b/serenity-app/src/main/res/layout-large/include_tvshow_detail.xml
@@ -38,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dip"
         android:layout_marginRight="5dip"
+        android:scaleType="fitXY"
         tools:src="@drawable/tv14"/>
 
     <ImageView
