Issue #369 Upgrade to latest glide version

--- a/serenity-app/src/main/res/layout-large/item_user_profile.xml
+++ b/serenity-app/src/main/res/layout-large/item_user_profile.xml
@@ -19,10 +19,9 @@
         android:id="@+id/profile_image"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/ic_generic_user"
-        android:tint="@color/white"
         android:layout_gravity="top"
         android:layout_marginBottom="5dp"
+        android:scaleType="fitXY"
         />
 
     <TextView
